[package]
name = "fpb"
version = "0.1.0"
authors = ["jimmur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
lazy_static = "*"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
async-trait = "*"
async-std = { version = "1.0.0", features = ["attributes"] }
