[package]
name = "fpb"
version = "0.1.0"
authors = ["jimmur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.*", features = ["rc", "serde_derive"] }
serde_derive = "1.0.*"
serde_json = "1.0.*"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
async-trait = "*"
async-std = { version = "1.*", features = ["attributes"] }
actix-rt = "*"
